<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_select_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonSelectCOD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/payment_cod"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonSelectOnline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/payment_online"
        app:layout_constraintTop_toBottomOf="@id/buttonSelectCOD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>